[gd_scene load_steps=11 format=3 uid="uid://dqhl4bk7ulvsh"]

[ext_resource type="PackedScene" uid="uid://qeg6q1ou08c4" path="res://ship/components/turrets/turret_size_1.glb" id="1_mct01"]
[ext_resource type="Script" path="res://ship/components/turrets/turret_component.gd" id="2_cwcif"]
[ext_resource type="Script" path="res://ship_weapons/scripts/turret_controller.gd" id="2_rsrih"]
[ext_resource type="Script" path="res://ship_weapons/scripts/mounted_weapons_controller.gd" id="3_i8rta"]
[ext_resource type="PackedScene" uid="uid://hbyqte87esm2" path="res://ship_weapons/autocannon/autocannon_size_1.tscn" id="4_f8ts8"]
[ext_resource type="Texture2D" uid="uid://ev0hmhfuqjb" path="res://ui/textures/circle.png" id="5_lr84h"]
[ext_resource type="Script" path="res://system/scripts/controllable_object.gd" id="6_amfu5"]
[ext_resource type="Script" path="res://system/scripts/interactable.gd" id="7_ke4pq"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_snrpd"]
radius = 2.11147

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_768th"]
properties/0/path = NodePath("Yaw:rotation")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Yaw/Pitch:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="turret_size_1" node_paths=PackedStringArray("turret_controller") instance=ExtResource("1_mct01")]
script = ExtResource("2_cwcif")
p_min = -10
p_max = 190
turret_controller = NodePath("TurretController")
component_name = "Turret"

[node name="Camera3D" type="Camera3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.57, -0.285)
far = 10000.0

[node name="Interact" type="StaticBody3D" parent="." index="1"]
transform = Transform3D(1, 0, -4.37114e-08, 0, 1, 0, 4.37114e-08, 0, 1, 0, 1.11462, 0)
collision_layer = 4
collision_mask = 0
script = ExtResource("7_ke4pq")
prompt_text = "Control cannon"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interact" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.048, 0.198)
shape = SubResource("CylinderShape3D_snrpd")

[node name="CameraPositionPush" type="RemoteTransform3D" parent="Yaw/Pitch" index="0"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.000305533, -0.285)
update_rotation = false
update_scale = false

[node name="MountedWeaponsController" type="Node3D" parent="Yaw/Pitch" index="5" node_paths=PackedStringArray("weapons", "controllable")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.56969, 0)
script = ExtResource("3_i8rta")
weapons = [NodePath("autocannon_size1"), NodePath("autocannon_size1_2"), NodePath("autocannon_size1_3"), NodePath("autocannon_size1_4")]
controllable = NodePath("../Controllable")

[node name="autocannon_size1" parent="Yaw/Pitch/MountedWeaponsController" index="0" instance=ExtResource("4_f8ts8")]
transform = Transform3D(1.31134e-07, 0.707107, -0.707107, 0, 0.707107, 0.707107, 1, -9.27259e-08, 9.27259e-08, 1.813, 1.81251, -0.0774319)

[node name="autocannon_size1_2" parent="Yaw/Pitch/MountedWeaponsController" index="1" instance=ExtResource("4_f8ts8")]
transform = Transform3D(1.31134e-07, 0.707107, 0.707107, -1.77636e-15, -0.707107, 0.707107, 1, -9.27259e-08, -9.27259e-08, 1.813, 1.31682, -0.0774319)

[node name="autocannon_size1_3" parent="Yaw/Pitch/MountedWeaponsController" index="2" instance=ExtResource("4_f8ts8")]
transform = Transform3D(4.37114e-08, -0.707107, 0.707107, 2.04501e-15, -0.707107, -0.707107, 1, 3.09086e-08, -3.09086e-08, -1.81251, 1.31682, -0.0774316)

[node name="autocannon_size1_4" parent="Yaw/Pitch/MountedWeaponsController" index="3" instance=ExtResource("4_f8ts8")]
transform = Transform3D(4.37114e-08, -0.707107, -0.707107, 3.82137e-15, 0.707107, -0.707107, 1, 3.09086e-08, 3.09086e-08, -1.81251, 1.81251, -0.0774316)

[node name="Crosshair" type="Sprite3D" parent="Yaw/Pitch" index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)
modulate = Color(1, 1, 1, 0.313726)
texture = ExtResource("5_lr84h")

[node name="Controllable" type="RemoteTransform3D" parent="Yaw/Pitch" index="7" node_paths=PackedStringArray("camera", "interactable", "synchronizer")]
transform = Transform3D(1, 0, -4.37114e-08, 0, 1, 0, 4.37114e-08, 0, 1, 0, 0, 0)
script = ExtResource("6_amfu5")
camera = NodePath("../../../Camera3D")
interactable = NodePath("../../../Interact")
synchronizer = NodePath("../../../MultiplayerSynchronizer")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="." index="9"]
replication_config = SubResource("SceneReplicationConfig_768th")

[node name="TurretController" type="Node" parent="." index="10" node_paths=PackedStringArray("yaw_obj", "pitch_obj", "camera", "control_manager", "crosshair", "ship_component", "weapons_manager")]
script = ExtResource("2_rsrih")
yaw_obj = NodePath("../Yaw")
pitch_obj = NodePath("../Yaw/Pitch")
camera = NodePath("../Camera3D")
control_manager = NodePath("../Yaw/Pitch/Controllable")
crosshair = NodePath("../Yaw/Pitch/Crosshair")
do_joystick = false
ship_component = NodePath("..")
weapons_manager = NodePath("../Yaw/Pitch/MountedWeaponsController")
